<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cristiano.webapp.MainActivity"
    tools:showIn="@layout/app_bar_stock">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/chartLayout"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/et_1"
        android:id="@+id/tv_1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chartLayout"
        android:layout_toRightOf="@id/tv_1"
        android:layout_toEndOf="@id/tv_1"
        android:id="@+id/et_1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/et_2"
        android:id="@+id/tv_2"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_1"
        android:layout_toRightOf="@id/tv_2"
        android:layout_toEndOf="@id/tv_2"
        android:id="@+id/et_2"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_2"
        android:id="@+id/btn_ann"
        android:text="@string/ann"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_2"
        android:layout_toRightOf="@id/btn_ann"
        android:layout_toEndOf="@id/btn_ann"
        android:id="@+id/btn_advice"
        android:text="@string/advice"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_ann"
        android:id="@+id/btn_svm"
        android:text="@string/svm"/>
</RelativeLayout>
